Before uploading the proposal to Google Docs

--- a/aalto.bib
+++ b/aalto.bib
@@ -954,6 +954,21 @@ Although derived from a relatively small number of studies, these results sugges
   pmid = {29799332}
 }
 
+@article{jainNanoporeSequencingAssembly2018,
+  title = {Nanopore Sequencing and Assembly of a Human Genome with Ultra-Long Reads},
+  author = {Jain, Miten and Koren, Sergey and Miga, Karen H and Quick, Josh and Rand, Arthur C and Sasani, Thomas A and Tyson, John R and Beggs, Andrew D and Dilthey, Alexander T and Fiddes, Ian T and Malla, Sunir and Marriott, Hannah and Nieto, Tom and O'Grady, Justin and Olsen, Hugh E and Pedersen, Brent S and Rhie, Arang and Richardson, Hollian and Quinlan, Aaron R and Snutch, Terrance P and Tee, Louise and Paten, Benedict and Phillippy, Adam M and Simpson, Jared T and Loman, Nicholas J and Loose, Matthew},
+  year = {2018},
+  month = apr,
+  volume = {36},
+  pages = {338--345},
+  issn = {1087-0156, 1546-1696},
+  doi = {10.1038/nbt.4060},
+  file = {/home/avnerus/Zotero/storage/2R8U252E/Jain et al. - 2018 - Nanopore sequencing and assembly of a human genome.pdf},
+  journal = {Nature Biotechnology},
+  language = {en},
+  number = {4}
+}
+
 @article{jentschPsychologyUncanny19061997,
   title = {On the Psychology of the Uncanny (1906)},
   author = {Jentsch, Ernst},
