Updates before the transition to Google Docs

--- a/aalto.bib
+++ b/aalto.bib
@@ -100,6 +100,16 @@
   series = {Dover {{Fine Art}}, {{History}} of {{Art}}}
 }
 
+@misc{AvnerPeledPhd,
+  title = {Avner\_peled\_phd\_proposal.Docx},
+  abstract = {Doctoral Candidate in Digital Learning Soft Robotic Telepresence in Conflict Resolution | Research Plan Avner Peled 03/2020  Statement I am applying to the Aalto University's Doctoral Programme in Arts, Design and Architecture. My Master's thesis at the Aalto Media Lab: Soft Robotic Incarnation ...},
+  file = {/home/avnerus/Zotero/storage/CQUD23EP/edit.html},
+  howpublished = {https://docs.google.com/document/u/1/d/1hNAH5C4ZbXZoCfP\_CN0hTV4hGxe\_qqyg/edit?usp=drive\_web\&ouid=102043793188119894386\&dls=true\&usp=embed\_facebook},
+  journal = {Google Docs},
+  language = {en},
+  note = {Library Catalog: docs.google.com}
+}
+
 @article{baoSoftRoboticsAcademic2018,
   title = {Soft Robotics: {{Academic}} Insights and Perspectives through Bibliometric Analysis},
   author = {Bao, Guanjun and Fang, Hui and Chen, Lingfeng and Wan, Yuehua and Xu, Fang and Yang, Qinghua and Zhang, Libin},
@@ -371,6 +381,22 @@
   journal = {Human Technology},
   keywords = {phenomenology,re-embodiment,remote environment,telepresence,telesurgery},
   number = {November}
+}
+
+@article{dovidioIntergroupContactPresent2003,
+  title = {Intergroup {{Contact}}: {{The Past}}, {{Present}}, and the {{Future}}},
+  shorttitle = {Intergroup {{Contact}}},
+  author = {Dovidio, John F. and Gaertner, Samuel L. and Kawakami, Kerry},
+  year = {2003},
+  month = jan,
+  volume = {6},
+  pages = {5--21},
+  issn = {1368-4302, 1461-7188},
+  doi = {10.1177/1368430203006001009},
+  file = {/home/avnerus/Zotero/storage/SGB2DT39/Dovidio et al. - 2003 - Intergroup Contact The Past, Present, and the Fut.pdf},
+  journal = {Group Processes \& Intergroup Relations},
+  language = {en},
+  number = {1}
 }
 
 @inproceedings{dreyfusTelepistemologyDescartesLast2000,
@@ -793,6 +819,18 @@ Although derived from a relatively small number of studies, these results sugges
   journal = {Political Theory},
   language = {en},
   number = {5}
+}
+
+@book{heppMediatizedWorlds2014,
+  title = {Mediatized {{Worlds}}},
+  editor = {Hepp, Andreas and Krotz, Friedrich},
+  year = {2014},
+  publisher = {{Palgrave Macmillan UK}},
+  address = {{London}},
+  doi = {10.1057/9781137300355},
+  file = {/home/avnerus/Zotero/storage/IWFEEKDK/Hepp and Krotz - 2014 - Mediatized Worlds.pdf},
+  isbn = {978-1-349-45310-8 978-1-137-30035-5},
+  language = {en}
 }
 
 @article{heymanSocialMediaDelinguistification2015,
@@ -1261,7 +1299,7 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   editor = {Ollman, Bertell and Anderson, Kevin B.},
   year = {2017},
   month = may,
-  edition = {1},
+  edition = {First},
   pages = {3--25},
   publisher = {{Routledge}},
   doi = {10.4324/9781315251196-1},
@@ -1643,6 +1681,22 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   journal = {Journal of Personality and Social Psychology},
   language = {en},
   number = {5}
+}
+
+@article{postmesSocialInfluenceComputerMediated2001,
+  title = {Social {{Influence}} in {{Computer}}-{{Mediated Communication}}: {{The Effects}} of {{Anonymity}} on {{Group Behavior}}},
+  shorttitle = {Social {{Influence}} in {{Computer}}-{{Mediated Communication}}},
+  author = {Postmes, Tom and Spears, Russell and Sakhel, Khaled and {de Groot}, Daphne},
+  year = {2001},
+  month = oct,
+  volume = {27},
+  pages = {1243--1254},
+  issn = {0146-1672, 1552-7433},
+  doi = {10.1177/01461672012710001},
+  file = {/home/avnerus/Zotero/storage/TKT47IZS/Postmes et al. - 2001 - Social Influence in Computer-Mediated Communicatio.pdf},
+  journal = {Personality and Social Psychology Bulletin},
+  language = {en},
+  number = {10}
 }
 
 @misc{ProgrammableAir,
@@ -2195,7 +2249,7 @@ Mindfulness has been used as a part of the modality of health care. It is clear 
   author = {Weil, Simone},
   year = {2003},
   month = sep,
-  edition = {1},
+  edition = {First},
   publisher = {{Routledge}},
   doi = {10.4324/9780203193518},
   isbn = {978-0-203-19351-8},
